Fixed the overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,16 @@
   padding: 0;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* Prevent scrolling */
+  background: rgb(10, 13, 18);
+  background: linear-gradient(104deg, rgba(10, 13, 18, 1) 0%, rgba(5, 25, 66, 1) 100%);
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -14,6 +24,7 @@
   height: 100vh;
   width: 100vw;
     color: white;
+    overflow: hidden;
     
     h1{
 
